test(notebook-books): renovate attach/retrieve/reading tests to small-test style
Co-authored-by: Cursor <cursoragent@cursor.com>